--- a/index.html
+++ b/index.html
@@ -1,40 +1,41 @@
 ---
 # this is an empty front matter
 ---
-<!DOCTYPE html>
 <html lang="en">
 <head>
     {% include header.html %}
 </head>
 <body>
 <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">WayMou</a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="#">Navbar Link</a></li>
+            <li><a href="#">关于</a></li>
         </ul>
-
-        <ul id="nav-mobile" class="side-nav">
-            <li><a href="#">Navbar Link</a></li>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="#">博客</a></li>
+        </ul>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="/projects.html">项目</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
 </nav>
+
 <div class="section no-pad-bot" id="index-banner">
     <div class="container">
         <br><br>
-        <h1 class="header center orange-text">Starter Template</h1>
+        <h1 class="header center orange-text">Welcome</h1>
         <div class="row center">
-            <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+            <h5 class="header col s12 light">This site is under construction.</h5>
         </div>
         <div class="row center">
-            <a href="http://materializecss.com/getting-started.html" id="download-button"
-               class="btn-large waves-effect waves-light orange">Get Started</a>
+            <a href="https://github.com/proliming" id="download-button"
+               class="btn-large waves-effect waves-light orange">Github</a>
         </div>
         <br><br>
 
     </div>
 </div>
-
 
 <div class="container">
     <div class="section">
@@ -43,35 +44,25 @@
         <div class="row">
             <div class="col s12 m4">
                 <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-                    <h5 class="center">Speeds up development</h5>
+                    <h5 class="center">Projects</h5>
 
-                    <p class="light">We did most of the heavy lifting for you to provide a default stylings that
-                        incorporate our custom components. Additionally, we refined animations and transitions to
-                        provide a smoother experience for developers.</p>
+                    <p class="light">我参与或者开发的项目以及各个项目页面</p>
                 </div>
             </div>
 
             <div class="col s12 m4">
                 <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-                    <h5 class="center">User Experience Focused</h5>
+                    <h5 class="center">Blog</h5>
 
-                    <p class="light">By utilizing elements and principles of Material Design, we were able to create a
-                        framework that incorporates components and animations that provide more feedback to users.
-                        Additionally, a single underlying responsive system across all platforms allow for a more
-                        unified user experience.</p>
+                    <p class="light">个人博客,用于记录生活以及技术点滴</p>
                 </div>
             </div>
 
             <div class="col s12 m4">
                 <div class="icon-block">
-                    <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-                    <h5 class="center">Easy to work with</h5>
+                    <h5 class="center">Share</h5>
 
-                    <p class="light">We have provided detailed documentation as well as specific code examples to help
-                        new users get started. We are also always open to feedback and can answer any questions a user
-                        may have about Materialize.</p>
+                    <p class="light">分享或者转载的精彩内容</p>
                 </div>
             </div>
         </div>
